--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.4
-  minio: ^3.0.4
-  image_picker: ^0.8.4+4
-  path_provider: ^2.0.9
+  http: ^0.13.3
+  image_picker: ^0.8.4
+  intl: ^0.17.0
+  minio: ^3.5.0
 
 
 
